Para conexion con bd en delia
Colocando el spring.jpa.database y spring.datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=PROMOTRUST
 
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/promotrust
+spring.datasource.username=postgres
+spring.datasource.password=Kakashi15
