--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/promotrust
 spring.datasource.username=postgres
-spring.datasource.password=$Mafer100
+spring.datasource.password=Kakashi15
+
+
